Frontend/assets/stylesheets/reservation.css
.reservation_main {
    /*background: url(~/assets/images/background/WindowsInsider_Light.webp) no-repeat fixed center;*/
    /*background: url(~/assets/images/background/SurfaceLaptop3_Blue.webp) no-repeat fixed center;*/
    background: url(~/assets/images/background/Surface_XP.webp) no-repeat fixed center;
    background-size: cover;
    overflow: clip;
    min-height: 100vh;
    /*min-width: 100vw;*/
}

.branch-status {
    background-color: #FFFFFF;
}

.summary-box {
    border-radius: 22px !important;
    background: rgba(255, 255, 255, 1) !important;
}

.img-layout {
    margin: 12px 0 0 0;
}

.food-card {
    background: rgba(255, 255, 255, 0.5);
    backdrop-filter: blur(1px) saturate(1.2);
    min-height: 500px;
    border-radius: 22px !important;
}

/*th, tr, td {*/
/*    background: transparent !important;*/
/*    color: black;*/
/*}*/

th {
    font-weight: 700 !important;
    font-size: large !important;
}

/*.main_container {*/
/*    border-radius: 22px;*/
/*}*/

